# winAPIconst

./: .gitignore  Cargo.toml  Changelog.md  ReadMe.md  build.rs  rustfmt.toml  todo.md  win_api_const.ahk  win_api_const_lib.ahk  win_api_const_lib_t.ahk  win_api_const_t.ahk
data/log/: winAPI_Const.rkyv.dupe  ziggle.tricky.txt  ziggle_clean64.dupe
helper/: Cargo.toml
helper/src/: alias.rs  fs.rs  helper.rs  lib.rs  parser.rs
lib_embed/: Cargo.toml
lib_embed/src/: lib_embed.rs  win_api_const_embed.rs  win_api_const_embed_t.rs
lib_mmap/: Cargo.toml
lib_mmap/src/: lib_mmap.rs  win_api_const_mmap.rs
src/: binmod.rs  data_parser.bin.rs  dummy.bin.rs  dummy.lib.rs  win_api_const_dump.rs
