[package]  # help on keys doc.rust-lang.org/cargo/reference/manifest.html
name   	= "win_api_const"
version	= "0.1.0"
edition	= "2021"
build  	= "build.rs"

[workspace] # relative to the workspace root
members = ["helper","lib_mmap","lib_embed"]

[[bin]]
name	= "dummy_bin"
path	= "src/dummy.bin.rs"

[dependencies]
helper   	= {path="helper"}
log      	= "0.4"
stderrlog	= "0.5"
anyhow   	= "1.0"
faccess  	= "0.2"

[build-dependencies]
log	= "0.4"

[patch.crates-io]
mmap-sync	= {git="https://github.com/eugenesvk/mmap-sync",branch="win"}

[profile.release]
# opt        	for      	size
strip        	= true   	# Auto strip symbols from the binary (included by default on Linux/macOS)
opt-level    	= "z"    	# |3|     optimize for size
lto          	= true   	# |false| Sets link-time optimization.
codegen-units	= 1      	# |16|    reduce parallel code generation
panic        	= "abort"	# |unwind| save ~20k w/o drop-on-panic cleanup and std::panic::catch_unwind
