[package]  # help on keys doc.rust-lang.org/cargo/reference/manifest.html
name   	= "win_api_const"
version	= "0.1.0"
edition	= "2021"
build  	= "build.rs"

[workspace] # relative to the workspace root
members = ["helper","lib_mmap","lib_embed"]

[[bin]]
name	= "data_parser"
path	= "src/data_parser.bin.rs"

[dependencies]
helper       	= {path="helper"}
log          	= "0.4"
stderrlog    	= "0.5"
thiserror    	= "=1.0.50"
anyhow       	= "=1.0.72"
faccess      	= "0.2"
fancy-regex  	= "0.11.0"
widestring   	= "1.0.2"
phf          	= {version="0.11",features=["macros"]} # generate Rust source for PHF data structures at compile time
phf_codegen  	= "0.11.1"
indexmap     	= "2.0.0"
rkyv         	= {version="0.7.42",features=["validation"]}
rkyv_wrappers	= {git="https://github.com/rkyv/rkyv_contrib",version="0.1.0"}
seahash      	= "4.1.0"
memmap2      	= "0.7.1"
mmap-sync    	= "1.0.2"
aho-corasick 	= "1.1.0"
chrono       	= "0.4.31"

# [dependencies.windows]
# version 	= "0.48"
# features	= [
#   "Win32_Foundation",
#   "Win32_UI_WindowsAndMessaging",
#   "Win32_UI_Input_KeyboardAndMouse", # active window
# ]

[build-dependencies]
helper	= {path="helper"}
log   	= "0.4"

[profile.release]
# opt        	for      	size
strip        	= true   	# Auto strip symbols from the binary (included by default on Linux/macOS)
opt-level    	= "z"    	# |3|     optimize for size
lto          	= true   	# |false| Sets link-time optimization.
codegen-units	= 1      	# |16|    reduce parallel code generation
panic        	= "abort"	# |unwind| save ~20k w/o drop-on-panic cleanup and std::panic::catch_unwind
