[package]
name       	= "win_api_const_mmap"
description	= "Libray to read win API constants from a memory-mapped database file"
version    	= "0.1.0"
edition    	= "2021"
license    	= "MIT"

[lib]
name      	= "winAPIconst_mmap"
path      	= "src/lib_mmap.rs"
crate-type	= ["cdylib"]

[dependencies]
# win_api_const	= {path="../../win_api_const"}
widestring     	= "1.0.2"
mmap-sync      	= "1.0.1"
rkyv           	= {version="0.7.42",features=["validation"]}
rkyv_wrappers  	= {git="https://github.com/rkyv/rkyv_contrib",version="0.1.0"}
